migration from annotation-reflection to factory